--- a/wikipedia.html
+++ b/wikipedia.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <form>
-            <input type="search">
+            <input type="search" placeholder="Type a keyword and press Enter">
         </form>
         <hr>
         <article></article>
